// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loading error 1`] = `null`;

exports[`loading error 2`] = `
<div>
  LoadingComponent
   
  {}
</div>
`;

exports[`loading error 3`] = `
<div>
  ErrorComponent
   
  {"error":{}}
</div>
`;

exports[`loading success 1`] = `null`;

exports[`loading success 2`] = `
<div>
  LoadingComponent
   
  {}
</div>
`;

exports[`loading success 3`] = `
<div>
  LoadingComponent
   
  {"prop":"foo"}
</div>
`;

exports[`loading success 4`] = `
<div>
  LoadingComponent
   
  {"prop":"bar"}
</div>
`;

exports[`server side rendering 1`] = `
<div>
  fixture1
</div>
`;

exports[`server side rendering es6 1`] = `
<div>
  fixture2
</div>
`;
